# ros2_autonomous_cpp

./: .gitignore  README.md  requirements.txt
arduino_firmware/: README.md  ackermann_drive_firmware.ino
docs/: API_CHANGES.md  BUILD_SYSTEM.md  CHANGELOG.md  INSTALLATION.md  MIGRATION_GUIDE.md  PERFORMANCE.md  PYTHON_MIGRATION.md  README.md  change_code.md  error.md  how_to_run.md  sensor_calibration.md  test_scenarios.md
install/: local_setup.sh  setup.sh
install/arduino_driver/include/arduino_driver/: arduino_bridge_node.hpp  serial_protocol.hpp
install/arduino_driver/lib/arduino_driver/: arduino_bridge_node  arduino_bridge_node.py
install/arduino_driver/share/arduino_driver/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/arduino_driver/share/arduino_driver/cmake/: arduino_driverConfig-version.cmake  arduino_driverConfig.cmake
install/arduino_driver/share/arduino_driver/config/: arduino.yaml
install/bringup/share/bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/bringup/share/bringup/environment/: path.dsv  (+1 more)
install/common/lib/common/: lidar_monitor.py  ultrasonic_monitor.py
install/common/share/common/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.sh  package.xml  package.zsh
install/decision/include/decision/: decision_node.hpp  lidar_obstacle_node.hpp
install/decision/lib/decision/: decision_node  decision_node.py  decision_node_2026.py  decision_node_ai.py  lidar_obstacle_node  lidar_obstacle_node.py
install/decision/share/decision/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/perception_pkg/include/perception_pkg/: lane_marking_node.hpp  lane_tracking_node.hpp  obstacle_detection_node.hpp
install/perception_pkg/lib/perception_pkg/: lane_marking_node  lane_marking_node.py  lane_tracking_node  lane_tracking_node.py  obstacle_detection_node  obstacle_detection_node.py  speed_sign_node.py  traffic_light_color_node.py  traffic_light_node.py
install/perception_pkg/share/perception_pkg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/rplidar_driver/share/rplidar_driver/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ultrasonic_driver/include/ultrasonic_driver/: ultrasonic_processor_node.hpp
install/ultrasonic_driver/lib/ultrasonic_driver/: ultrasonic_processor_node  ultrasonic_processor_node.py
install/ultrasonic_driver/share/ultrasonic_driver/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/usb_cam_driver/share/usb_cam_driver/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/bringup/: CMakeLists.txt  package.xml
src/bringup/launch/: mission.launch  mission_launch.py  obstacle.launch  parking.launch  track.launch  track_launch.py
src/common/: CMakeLists.txt
src/common/launch/: sensor_debug.launch
src/common/scripts/: lidar_monitor.py  ultrasonic_monitor.py
src/decision/: CMakeLists.txt  package.xml
src/decision/include/decision/: decision_node.hpp  lidar_obstacle_node.hpp
src/decision/scripts/: decision_node.py  decision_node_2026.py  decision_node_ai.py  lidar_obstacle_node.py
src/decision/src/: decision_node.cpp  lidar_obstacle_node.cpp
src/drivers/arduino_driver/: CMakeLists.txt  package.xml
src/drivers/arduino_driver/config/: arduino.yaml
src/drivers/arduino_driver/include/arduino_driver/: arduino_bridge_node.hpp  serial_protocol.hpp
src/drivers/arduino_driver/ino/motor_control/: motor_control.ino
src/drivers/arduino_driver/ino/motor_control_with_feedback/: motor_control_with_feedback.ino
src/drivers/arduino_driver/scripts/: arduino_bridge_node.py
src/drivers/arduino_driver/src/: arduino_bridge_node.cpp  serial_protocol.cpp
src/drivers/rplidar_driver/: CMakeLists.txt  package.xml
src/drivers/rplidar_driver/config/: rplidar.yaml
src/drivers/rplidar_driver/launch/: rplidar.launch  rplidar_launch.py
src/drivers/ultrasonic_driver/: CMakeLists.txt
src/drivers/ultrasonic_driver/config/: ultrasonic.yaml
src/drivers/ultrasonic_driver/include/ultrasonic_driver/: ultrasonic_processor_node.hpp
src/drivers/ultrasonic_driver/scripts/: ultrasonic_processor_node.py
src/drivers/ultrasonic_driver/src/: ultrasonic_processor_node.cpp
src/drivers/usb_cam_driver/: CMakeLists.txt
src/drivers/usb_cam_driver/config/: usb_cam.yaml  usb_cam_rear.yaml
src/drivers/usb_cam_driver/launch/: dual_usb_cam_launch.py  usb_cam.launch  usb_cam_launch.py
src/perception_pkg/: CMakeLists.txt  package.xml  setup.py
src/perception_pkg/config/: lane_params.yaml
src/perception_pkg/include/perception_pkg/: lane_marking_node.hpp  lane_tracking_node.hpp  obstacle_detection_node.hpp
src/perception_pkg/include/perception_pkg/common/: detection_types.hpp  image_utils.hpp  lane_geometry.hpp
src/perception_pkg/launch/: lane_bringup.launch  lane_bringup_launch.py
src/perception_pkg/perception_pkg/: __init__.py  parking_line_node.py
src/perception_pkg/perception_pkg/perception/lane/: detector.py
src/perception_pkg/perception_pkg/perception/object_detection/: detector.py  yolo_speed_sign_pt.py
src/perception_pkg/perception_pkg/perception/parking/: __init__.py  parking_line_detector.py
src/perception_pkg/scripts/: lane_marking_node.py  lane_tracking_node.py  obstacle_detection_node.py  speed_sign_node.py  traffic_light_color_node.py  traffic_light_node.py
src/perception_pkg/src/: lane_marking_node.cpp  lane_tracking_node.cpp  obstacle_detection_node.cpp
src/perception_pkg/src/common/: image_utils.cpp  lane_geometry.cpp
(+71 files in other folders)
