<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bringup</name>
  <version>0.1.0</version>
  <description>Launch orchestration for autonomous vehicle</description>
  <maintainer email="todo@example.com">todo</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>perception_pkg</exec_depend>
  <exec_depend>decision</exec_depend>
  <exec_depend>arduino_driver</exec_depend>
  <exec_depend>ultrasonic_driver</exec_depend>
  <exec_depend>rplidar_driver</exec_depend>
  <exec_depend>usb_cam_driver</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
