<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arduino_driver</name>
  <version>0.1.0</version>
  <description>Arduino serial communication driver</description>
  <maintainer email="todo@example.com">todo</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>ackermann_msgs</depend>
  <depend>std_msgs</depend>

  <!-- Boost for serial communication -->
  <depend>libboost-system-dev</depend>
  <depend>libboost-thread-dev</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
